# AppPrecos

./: .cursorrules  .gitignore  ARCHITECTURE_ANALYSIS.md  COLUMN_REFERENCE.md  CRITICAL_FIXES_SUMMARY.md  DUAL_DATABASE_TEST_RESULTS.md  FINAL_ARCHITECTURE.md  FIXES_CHECKLIST.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.txt  README.md  RENDER_SETUP_COMPLETE.md  TESTING_STITCH.md  UI_UX_GUIDELINES.md  analyze_worker_frontend.py  build.gradle.kts  gradle.properties  mcp_read_aloud_read_summary.cmd  settings.gradle.kts  verify_merge.py
.cursor/: mcp.json
backend/: .env.example  .gitignore  API_COMPARISON.md  ARCHITECTURE_V2.md  BUG_FIX_SUMMARY.md  COMPLETE_FIX_README.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COSMOS_API_SETUP.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.txt  EANPICTURES_API_TEST_RESULTS.md  EAN_UPDATE_GUIDE.md  EAN_UPDATE_SUMMARY.md  FINAL_VALIDATION.txt  FLOW_ANALYSIS.md  GTIN_VALIDATION_API_INFO.md  IMPLEMENTATION_COMPLETE.md  NCM_IMPLEMENTATION_COMPLETE.txt  PRODUCTION_SETUP.md  PRODUCT_NAME_UPDATE_SUMMARY.md  QUICK_START.md  README.md  REVIEW.md  RSC_GTIN_API_GUIDE.md  RSC_GTIN_TEST_RESULTS.md  SCALING.md  SUPABASE_AUTH_SETUP.md  add_ean_migration.sql  add_llm_table_migration.sql  add_new_columns_migration.sql  add_product_name_migration.sql  app.py  auth.py  clean_all_databases.py  config.py  constants.py  cosmos_test_results.json  create_clean_ncm_table.py  eanpictures_test_results.json  enrichment_service.py  (+29 more)
webapp/: DEPLOYMENT.txt  LOCAL_SERVER_SETUP.txt  env.example  manage.py  pyproject.toml  render-build.sh  render.yaml
webapp/app_precos_site/: asgi.py  settings.py  urls.py  wsgi.py
webapp/core/: api_urls.py  api_views.py  tests.py  urls.py  views.py
webapp/core/services/: supabase_service.py
webapp/static/css/: app.css
webapp/static/js/: app.js  qr-scanner.js
webapp/static/pwa/: offline.html  service-worker.js
webapp/staticfiles/js/: app.js  qr-scanner.js
webapp/staticfiles/pwa/: offline.html  service-worker.js
(+182 files in other folders)
